# hotel-service/api/swagger.yaml
@@ -1,11 +1,9 @@
 definitions:
-  model.Hotel:
+  handlers.HotelDto:
     properties:
       description:
         type: string
-      hotelier:
-        $ref: '#/definitions/model.Hotelier'
-      hotelierID:
+      hotelierId:
         type: string
       id:
         type: string
@@ -14,66 +12,56 @@ definitions:
       name:
         type: string
     type: object
-  model.HotelData:
+  handlers.HotelModifyDto:
     properties:
       description:
         type: string
-      hotelier:
-        $ref: '#/definitions/model.Hotelier'
-      hotelierID:
+      hotelierId:
         type: string
       location:
         type: string
       name:
         type: string
     type: object
-  model.Hotelier:
+  handlers.HotelierDto:
     properties:
       id:
         type: string
       username:
         type: string
     type: object
-  model.HotelierData:
+  handlers.HotelierModifyDto:
     properties:
-      username:
+      name:
         type: string
     type: object
-  model.Room:
+  handlers.RoomDto:
     properties:
       capacity:
         type: integer
       description:
         type: string
-      hotel:
-        $ref: '#/definitions/model.Hotel'
-      hotelID:
+      hotelId:
         type: string
       id:
         type: string
-      isAvailable:
-        type: boolean
       name:
         type: string
       pricePerDay:
-        type: number
+        type: integer
     type: object
-  model.RoomData:
+  handlers.RoomModifyDto:
     properties:
       capacity:
         type: integer
       description:
         type: string
-      hotel:
-        $ref: '#/definitions/model.Hotel'
-      hotelID:
+      hotelId:
         type: string
-      isAvailable:
-        type: boolean
       name:
         type: string
       pricePerDay:
-        type: number
+        type: integer
     type: object
 info:
   contact: {}
@@ -89,7 +77,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.Hotel'
+              $ref: '#/definitions/handlers.HotelDto'
             type: array
         "400":
           description: Bad Request
@@ -109,7 +97,7 @@ paths:
         name: hotel
         required: true
         schema:
-          $ref: '#/definitions/model.HotelData'
+          $ref: '#/definitions/handlers.HotelModifyDto'
       produces:
       - application/json
       responses:
@@ -153,7 +141,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Hotel'
+            $ref: '#/definitions/handlers.HotelDto'
         "400":
           description: Bad Request
           schema:
@@ -172,7 +160,7 @@ paths:
         name: hotel
         required: true
         schema:
-          $ref: '#/definitions/model.HotelData'
+          $ref: '#/definitions/handlers.HotelModifyDto'
       produces:
       - application/json
       responses:
@@ -197,7 +185,7 @@ paths:
         name: hotel
         required: true
         schema:
-          $ref: '#/definitions/model.HotelierData'
+          $ref: '#/definitions/handlers.HotelierModifyDto'
       produces:
       - application/json
       responses:
@@ -241,7 +229,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Hotelier'
+            $ref: '#/definitions/handlers.HotelierDto'
         "400":
           description: Bad Request
           schema:
@@ -260,7 +248,7 @@ paths:
         name: hotel
         required: true
         schema:
-          $ref: '#/definitions/model.HotelierData'
+          $ref: '#/definitions/handlers.HotelModifyDto'
       produces:
       - application/json
       responses:
@@ -286,7 +274,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.Room'
+              $ref: '#/definitions/handlers.RoomDto'
             type: array
         "400":
           description: Bad Request
@@ -306,7 +294,7 @@ paths:
         name: hotel
         required: true
         schema:
-          $ref: '#/definitions/model.RoomData'
+          $ref: '#/definitions/handlers.RoomModifyDto'
       produces:
       - application/json
       responses:
@@ -350,7 +338,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Room'
+            $ref: '#/definitions/handlers.RoomDto'
         "400":
           description: Bad Request
           schema:
@@ -369,7 +357,7 @@ paths:
         name: hotel
         required: true
         schema:
-          $ref: '#/definitions/model.RoomData'
+          $ref: '#/definitions/handlers.RoomModifyDto'
       produces:
       - application/json
       responses:
