# hotel-service/internal/model/models.go
@@ -4,7 +4,8 @@ import (
 	"github.com/google/uuid"
 )
 
-type HotelData struct {
+type Hotel struct {
+	ID          uuid.UUID `gorm:"primary_key;type:uuid;default:uuid_generate_v4()"`
 	Name        string
 	Description string
 	Location    string
@@ -12,31 +13,17 @@ type HotelData struct {
 	Hotelier    Hotelier  `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;foreignKey:HotelierID"`
 }
 
-type Hotel struct {
-	ID        uuid.UUID `gorm:"primary_key;type:uuid;default:uuid_generate_v4()"`
-	HotelData `gorm:"embedded"`
-}
-
-type HotelierData struct {
+type Hotelier struct {
+	ID       uuid.UUID `gorm:"primary_key;type:uuid;default:uuid_generate_v4()"`
 	Username string
 }
 
-type Hotelier struct {
-	ID           uuid.UUID `gorm:"primary_key;type:uuid;default:uuid_generate_v4()"`
-	HotelierData `gorm:"embedded"`
-}
-
-type RoomData struct {
-	IsAvailable bool
+type Room struct {
+	ID          uuid.UUID `gorm:"primary_key;type:uuid;default:uuid_generate_v4()"`
 	Name        string
 	Description string
 	HotelID     uuid.UUID `gorm:"type:uuid"`
 	Hotel       Hotel     `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;foreignKey:HotelID"`
-	PricePerDay float64
+	PricePerDay int64
 	Capacity    int
-}
-
-type Room struct {
-	ID       uuid.UUID `gorm:"primary_key;type:uuid;default:uuid_generate_v4()"`
-	RoomData `gorm:"embedded"`
 }
